refactor: some changes on Soffit classes